--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,15 +10,15 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-card *ngFor="let contact of contacts$ | async" (click)='cardSelected(contact)'> 
 
-    <ion-card-header>
-      {{contact.name}}
-    </ion-card-header>
-  
-    <ion-card-content>
-      <p>{{contact.balance}}</p>
-    </ion-card-content>
-  
-  </ion-card>
+  <ion-list>
+    <ion-item *ngFor="let contact of contacts$ | async" (click)="cardSelected(contact)">
+      <ion-avatar item-start>
+          <text-avatar [text]="contact.name" item-start></text-avatar>
+      </ion-avatar>
+      <h2>{{contact.name}}</h2>
+      <p *ngIf="contact.balance >= 0" ion-text color='secondary' item-end>{{contact.getAbsoluteBalance() | currency:'GBP':true:'.2-2'}}</p>
+      <p *ngIf="contact.balance < 0" ion-text color='danger' item-end>{{contact.getAbsoluteBalance() | currency:'GBP':true:'.2-2'}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
