--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,8 +17,9 @@
           <text-avatar [text]="contact.name" item-start></text-avatar>
       </ion-avatar>
       <h2>{{contact.name}}</h2>
-      <p *ngIf="contact.balance >= 0" ion-text color='secondary' item-end>{{contact.getAbsoluteBalance() | currency:'GBP':true:'.2-2'}}</p>
-      <p *ngIf="contact.balance < 0" ion-text color='danger' item-end>{{contact.getAbsoluteBalance() | currency:'GBP':true:'.2-2'}}</p>
+      <p *ngIf="contact.owesMoney()" ion-text color='secondary' item-end>{{contact.getAbsoluteBalance() | currency:'GBP':true:'.2-2'}}</p>
+      <p *ngIf="contact.owedMoney()" ion-text color='danger' item-end>{{contact.getAbsoluteBalance() | currency:'GBP':true:'.2-2'}}</p>
+      <p *ngIf="contact.balance === 0" ion-text item-end>{{contact.getAbsoluteBalance() | currency:'GBP':true:'.2-2'}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
