--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -25,10 +25,10 @@
 
   <ion-row>
     <ion-col width-6>
-        <button full ion-button>{{getDebitContactButtonText()}}</button>
+        <button full ion-button (click)="newTransactionButtonClicked('DEBIT')">{{getDebitContactButtonText()}}</button>
     </ion-col>
     <ion-col width-6>
-        <button full ion-button>{{getCreditContactButtonText()}}</button>
+        <button full ion-button (click)="newTransactionButtonClicked('CREDIT')">{{getCreditContactButtonText()}}</button>
     </ion-col>
   </ion-row>
 
